--- a/ReactProntoClin/prontoclin/package.json
+++ b/ReactProntoClin/prontoclin/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4"
   },
